--- a/blog/_posts/2018-10-08-pkg3.md
+++ b/blog/_posts/2018-10-08-pkg3.md
@@ -4,11 +4,11 @@ title:  Julia's New Package Manager
 author: Stefan Karpinski
 ---
 
-Julia 1.0 ships with a brand-new package manager. This new package manager, code named "Pkg3" during its development, takes a fairly different approach from typical package managers, including Julia's previous two package managers (Pkg1 and Pkg2, also designed by yours truly). Package managers have traditionally aimed to "just" automate the installation and configuration of packages on the current system. And this is truly a noble and useful thing to streamline! Pkg3, is more ambitious and as a result can be a bit of a novel experience at times. By explaining how it works, and even more importantly _why_ it works that way, I hope that I can help people to understand the new package manager and make good use of it to make their lives easier. And even if you're not a Julia user (yet!) the philosophy and design principles behind Julia's new package management may be of interest.
+Julia 1.0 has a brand new package manager. This package manager, code named "Pkg3", takes a different approach than traditional package managers, including the previous two iterations of Julia's. Package managers traditionally aim to automate the installation and configuration of a shared global set of packages on a particular computer. Pkg3 does this too, of course, but it also aims to do more. This ambition means it works a little differently than you might be used to, which can be confusing at first. In this post, I'll explain the philosophy behind Pkg3 and *why* it works the way it does.
 
-### Implicit global mutable state
+### Eliminating implicit global mutable state
 
-What does the following Julia code do?
+Consider the following Julia code:
 
 ```julia
 import JSON
@@ -16,14 +16,15 @@ import JSON
 v = JSON.parse("[1, 2, 3]")
 ```
 
-This code snippet looks fairly straightforward and looks like it should result in having `v == [1, 2, 3]`. But of course, I wouldn't be asking if it was that simple—it's a trick question. The correct answer is *Who knows? It could do literally anything!* In Julia 0.6 and earlier, in order to have any idea what this code actually does, one needs to know what `import JSON` does and that depends on what files and directories happen to exist on the computer where Julia is running. It could print `Hello, world` and then exit. Or it could delete all your files. It all depends on what happens to be on your hard drive in the place where Julia finds a file called `JSON.jl`. That is what we will call *implicit global mutable state*:
+What does this snippet do? It looks fairly straightforward: it should result in having `v == [1, 2, 3]`. Of course, I wouldn't be asking if it was that simple, it's a trick question. The correct answer is: *Who knows? It could do literally anything!* In order to have any idea what this code actually does, one needs to know what `import JSON` does and that depends on what files happen to exist on the computer where you're running the code. It could print "Hello, world" and then exit. Or it could delete all your files. It all depends on what happens to be on your hard drive. So the behavior of this code is very much not self-contained. It depends on what we will call *implicit global mutable state*:
 
-- It's **implicit** because there's no way to record it—it's just a bunch of files on your hard disk.
-- It's **global** because it's shared between all the different projects and Julia process on your system.
-- It's **mutable** because you can change it.
+- **Implicit** because it's not explicitly written down anywhere, it's just what happens to be installed.
+- **Global** because it's shared between all the different Julia projects and processes on your system.
+- **Mutable** because you can change it at any time—there's no way to refer to a permanent state.
 
-The premise of Pkg3 and the way code loading works in Julia 1.0 is to take all of this implicit global mutable state and make it *explicit, local and immutable* instead:
+The fundamental premise of Pkg3 is to take all of this implicit global mutable state and make it *explicit, local and immutable* instead:
 
-- We make it **explicit** by recording what exactly `import JSON` means in two files: `Project.toml` and `Manifest.toml`. These files can be checked into version control and tracked just like any other source code. They spell out exactly what package `JSON` is and exactly what version of `JSON` should be loaded.
-- We make it ***<u>local</u>*** by allowing different projects to have different `Project.toml` and `Manifest.toml` files. What `import JSON` means in one project is completely independent of what it means in another project. They can use different versions of the same `JSON` package or they could use unrelated packages that both happen to be called `JSON`.
-- We make it **immutable** by committing `Project.toml` and `Manifest.toml` into version control. Each dependency is identified by a permanently assigned UUID and each version of each dependency is identified by a cryptographic hash of its source tree.
+- **Explicit** by recording what exactly `import JSON` means. We store this in two files: `Project.toml` and `Manifest.toml`, which can be checked into version control and tracked just like any other source code. They spell out exactly what package `JSON` is and exactly what version of `JSON` should be loaded.
+- **Local** by allowing different projects to have their own `Project.toml` and `Manifest.toml` files. What `import JSON` means in each project is independent. They can use different versions of the same `JSON` package or they could even use unrelated packages that both happen to be called `JSON`.
+- **Immutable** by committing `Project.toml` and `Manifest.toml` into version control. Each dependency is identified by a permanently assigned UUID and each version of each dependency is identified by a cryptographic hash of its source tree. Once committed into version control, this records the dependencies of a project at that commit as permanently as it records the source of the project itself.
+
